--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -64,17 +64,7 @@
                         <button type="submit" class="btn btn-success btn-large">Add</button>
                     </div>
                 </form>
-                <div class="bs-callout bs-callout-info">
-                    You can use varibles or references when defining the parameters. Below are some of the system level variable:
-                    <ul>
-                        <li><code>InitInput</code>: The initial input files which maps to files you provide when you create a job.</li>
-                        <li><code>LastOutput</code>: Output files of last step.</li>
-                        <li><code>LastOutputN</code>: The n-th output file of last step (in alphabetical order).</li>
-                        <li><code>job</code>: job ID.</li>
-                        <li><code>ThreadN</code>: The number of CPUs in the running node.</li>
-                    </ul>
-                    All varibles should be surrounded by curly-braces, like {ThreadN}.
-                </div>
+                {% include 'ui/variant_hint.html' %}
             </div>
         </div>
     </div>
