--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -114,6 +114,46 @@
                 </div>
             </div>
             <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="head-cluster-settings">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#settings-container" href="#cluster-settings" aria-expanded="true" aria-controls="cluster-settings">
+                            Cluster Settings
+                        </a>
+                    </h4>
+                </div>
+                <div id="cluster-settings" class="panel-collapse collapse" role="tabpanel" aria-labelledby="head-cluster-settings">
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label class="control-label" for="cluster_type">Cluster engine:</label>
+                            <select class="form-control" name="cluster_type" id="cluster-type">
+                                <option value="">Run on local / cloud</option>
+                                {% for model in cluster_models %}
+                                {% if cluster_type == model %}
+                                <option value="{{ model }}" selected>{{ model }}</option>
+                                {% else %}
+                                <option value="{{ model }}">{{ model }}</option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="cluster-cpu">CPU cores for single job:</label>
+                            <input type="number" class="form-control cluster-control" id="cluster-cpu" aria-valuemin="1" name="job_cpu" value="{{ job_cpu }}" disabled="disabled"/>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="cluster-dest">Destination:</label>
+                            <input type="text" class="form-control cluster-control" id="cluster-dest" name="job_dest" value="{{ job_dest }}" disabled="disabled"/>
+                            <p class="help-block">Defines the destination of the job. The destination names a queue (high, low, FAT), a server, or a queue at a server.</p>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="cluster-cpu">Wall-time:</label>
+                            <input type="text" class="form-control cluster-control" id="cluster-wt" name="job_wt" value="{{ job_wt }}" disabled="disabled"/>
+                            <p class="help-block">If not set for a generally available resource, the limit for CPU time is infinite.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="head-maintenance-settings">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" data-parent="#settings-container" href="#maintenance-settings" aria-expanded="true" aria-controls="maintenance-settings">
@@ -134,6 +174,16 @@
 </div>
 {% endblock %}
 {% block script %}
+if ($('#cluster-type').children('option:selected').val()!=''){
+    $('.cluster-control').removeAttr("disabled");
+}
+$('#cluster-type').change(function(){
+    if($(this).children('option:selected').val()==''){
+        $('.cluster-control').attr("disabled","disabled");
+    }else{
+        $('.cluster-control').removeAttr("disabled");
+    }
+});
 $('.tooltipopen').tooltip();
 $('.sliderbar').slider({
     formatter: function(value) {
@@ -149,4 +199,5 @@ $.get("{% url 'ui:update_bioqueue' %}", function(data){
     }
     $("#github-version").html(msg);
 });
+
 {% endblock %}
