--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -141,6 +141,11 @@
                             <input type="number" class="form-control cluster-control" id="cluster-cpu" aria-valuemin="1" name="job_cpu" value="{{ job_cpu }}" disabled="disabled"/>
                         </div>
                         <div class="form-group">
+                            <label class="control-label" for="cluster-mem">Memory:</label>
+                            <input type="text" class="form-control cluster-control" id="cluster-mem" name="job_mem" value="{{ job_mem }}" disabled="disabled"/>
+                            <p class="help-block">Maximum amount of physical memory used by the job.</p>
+                        </div>
+                        <div class="form-group">
                             <label class="control-label" for="cluster-dest">Destination:</label>
                             <input type="text" class="form-control cluster-control" id="cluster-dest" name="job_dest" value="{{ job_dest }}" disabled="disabled"/>
                             <p class="help-block">Defines the destination of the job. The destination names a queue (high, low, FAT), a server, or a queue at a server.</p>
