Fix: file mapping for reentrancy

--- a/ui/templates/ui/foot.html
+++ b/ui/templates/ui/foot.html
@@ -1,1 +1,10 @@
-<footer class="well" style="text-align:center;">Created By Li Yao.</footer>
+<footer><div class="container">
+    <ul class="list-inline">
+      <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
+      <li><a href="http://www.bioqueue.org/en/latest/">Documentation</a></li>
+      <li><a href="https://github.com/liyao001/BioQueue/issues">Having Problems?</a></li>
+    </ul>
+    <p>
+    BioQueue is licensed under the <a href="https://github.com/liyao001/BioQueue/blob/master/LICENSE">Apache License 2.0</a>. The documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+    </p>
+</div></footer>
