--- a/ui/templates/ui/single.html
+++ b/ui/templates/ui/single.html
@@ -2,16 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Sign In | BioQueue</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Li Yao">
-<link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
-<link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">
-<link href="{% static "ui/css/site.css" %}" rel="stylesheet" media="screen">
-<link href="{% static "ui/css/font-awesome.min.css" %}" rel="stylesheet">
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <meta charset="utf-8">
+    <title>Sign In | BioQueue</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Li Yao">
+    <link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "ui/css/site.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "ui/css/font-awesome.min.css" %}" rel="stylesheet">
+    <!--[if lt IE 9]>
+        <script src="{% static "ui/js/respond.min.js" %}"></script>
+        <script src="{% static "ui/js/html5shiv.min.js" %}"></script>
     <![endif]-->
 </head>
 <body style="background-color: #efefef;">
