--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -44,7 +44,14 @@
                             <div class="protocol-step">
                                 <div class="form-group">
                                     <label class="control-label" for="name">Software</label>
-                                    <input type="text" class="form-control input-xlarge" id="software" name="software" required />
+                                    <div class="input-group">
+                                        <input type="text" class="form-control input-xlarge" id="software" name="software" required />
+                                        <span class="input-group-btn"><button type="button" onclick="fetchKB(this);" class="btn btn-default">How to use the software?</button></span>
+                                    </div>
+                                    <div class="hints" style="display: none;">
+                                        <a class="close" onclick="$(this).parent().hide();" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></a>
+                                        <div class="hints-container"></div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label" for="name">Parameter</label>
@@ -69,6 +76,7 @@
 </div>
 {% endblock %}
 {% block script %}
+    var before_software = "";
     $("#add-protocol").addClass("active");
     $(document).ready(function(){
         var oTextbox = new AutoSuggestControl("parameter");
@@ -95,6 +103,27 @@
 			}
 		}
     });
+    function fetchKB(obj){
+        var self = $(obj);
+        var this_software = self.parent().parent().children("#software").val();
+        var hint_panel = self.parent().parent().parent().children(".hints");
+        if (before_software != this_software){
+            before_software = this_software;
+            self.attr("disabled", true);
+            $.post("{{ api_bus }}/Kb/findSoftwareUsage", {software: this_software}, function(data){
+                if (data.status){
+                    hint_panel.children('.hints-container').html(data.content);
+                    hint_panel.show();
+                }
+                self.attr("disabled", false);
+            }).error(function(){
+                self.attr("disabled", false);
+            });
+        }else{
+            hint_panel.show();
+        }
+
+    }
     function addStep(){
         var new_id = "parameter"+$(".parameter-ac").length
         new_step = $(".protocol-step:eq(0)").clone();
