--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -140,9 +140,14 @@
                             <input type="number" class="form-control cluster-control" id="cluster-cpu" aria-valuemin="1" name="job_cpu" value="{{ job_cpu }}" disabled="disabled"/>
                         </div>
                         <div class="form-group">
-                            <label class="control-label" for="cluster-mem">Memory:</label>
+                            <label class="control-label" for="cluster-mem">Physical Memory:</label>
                             <input type="text" class="form-control cluster-control" id="cluster-mem" name="job_mem" value="{{ job_mem }}" disabled="disabled"/>
-                            <p class="help-block">Maximum amount of physical memory used by the job.</p>
+                            <p class="help-block">Maximum amount of physical memory used by the job. e.g. 32GB, 64MB</p>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="cluster-mem">Virtual Memory:</label>
+                            <input type="text" class="form-control cluster-control" id="cluster-mem" name="job_vrt" value="{{ job_vrt }}" disabled="disabled"/>
+                            <p class="help-block">Maximum amount of virtual memory used by the job. e.g. 32GB, 64MB</p>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="cluster-dest">Destination:</label>
