--- a/templates/admin/delete_selected_confirmation.html
+++ b/templates/admin/delete_selected_confirmation.html
@@ -46,8 +46,8 @@
     {% endfor %}
     <input type="hidden" name="action" value="delete_selected" />
     <input type="hidden" name="post" value="yes" />
-    <input type="submit" value="{% trans "Yes, I'm sure" %}" />
-    <a href="#" class="button cancel-link">{% trans "No, take me back" %}</a>
+    <button type="submit" value="{% trans "Yes, I'm sure" %}" class="btn btn-danger" >{% trans "Yes, I'm sure" %}</button>
+    <a href="#" class="btn btn-default">{% trans "No, take me back" %}</a>
     </div>
     </form>
 {% endif %}
