--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -71,9 +71,9 @@
 		    </a>
 		</div>
 		<div class="metro-nav-block nav-block-red" style="margin-right: 0;">
-		    <a data-original-title="" href="{% url 'ui:show_learning' %}">
+		    <a data-original-title="" href="//bioqueue.nefu.edu.cn">
 		        <i class="icon-bar-chart"></i>
-		        <div class="status">Machine Learning</div>
+		        <div class="status">Open Platform</div>
 		    </a>
 		</div>
 	</div>
