--- a/ui/templates/ui/foot.html
+++ b/ui/templates/ui/foot.html
@@ -1,7 +1,7 @@
 <footer><div class="container">
     <ul class="list-inline">
       <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
-      <li><a href="http://www.bioqueue.org/en/latest/">Documentation</a></li>
+      <li><a href="https://bioqueue.readthedocs.io/en/latest/">Documentation</a></li>
       <li><a href="https://github.com/liyao001/BioQueue/issues">Having Problems?</a></li>
     </ul>
     <p>
