--- a/ui/templates/ui/import_protocol.html
+++ b/ui/templates/ui/import_protocol.html
@@ -13,5 +13,10 @@
         <td>{{ ref.description }}</td>
     </tr>
     {% endfor %}
+    <tr class="success">
+        <td colspan="2">This color indicates you need to create the reference manually.</td>
+    </tr>
+    <tr class="danger">
+    </tr>
     </tbody>
 </table>
