--- a/ui/templates/ui/import_protocol.html
+++ b/ui/templates/ui/import_protocol.html
@@ -17,6 +17,7 @@
         <td colspan="2">This color indicates you need to create the reference manually.</td>
     </tr>
     <tr class="danger">
+        <td colspan="2">This color indicates a reference in the same name has existed. So it may causing conflict.</td>
     </tr>
     </tbody>
 </table>
