--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -17,6 +17,7 @@
                     </div>
                     <div class="etc-login-form">
                         <p>already have an account? <a href="{% url 'accounts:login' %}">login here</a></p>
+                        <p>NOTE: After you submit the application form, please wait for the administrator to active your account.</p>
                     </div>
                 </form>
             </div>
