--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,23 +1,25 @@
-{% extends "ui/single.html" %}
+  {% extends "ui/single.html" %}
 {% block title %}Sign In | BioQueue{% endblock %}
 {% block content %}
-<div class="well">
-    <h1 class="margin-base-vertical text-center" style="text-align:center;">Sign in BioQueue</h1>
-    <form action="." method="post" class="form-horizontal">
-        <div class="control-group"></div>
-        <div class="Validform_checktip alert" style="display: none;"></div>
-        {{ form.as_p }}
-        <input type="hidden" name="next" value="{{ next }}" />
-        {% csrf_token %}
-        <div class="row-fluid">
-            <div class="col-xs-12">
-              <button class="input-block-level btn btn-primary" type="submit" class="btn">
-              Sign in
-              </button>
+    <style>label{display: none;}</style>
+    <div class="container-fluid" style="margin: 50px 0;">
+        <div class="row-fluid text-center">
+            <h1>Login</h1>
+            <div class="login-form">
+                <form action="." method="post" id="login-form" class="text-left" novalidate="novalidate">
+                    <div class="Validform_checktip alert" style="display: none;"></div>
+                    <div class="main-login-form">
+                        <div class="login-group">
+                            {{ form.as_p }}
+                        </div>
+                        <input type="hidden" name="next" value="{{ next }}" />
+                        {% csrf_token %}
+                        <button type="submit" class="login-button"><i class="glyphicon glyphicon-chevron-right"></i></button>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
-</div>
+    </div>
 {% endblock %}
 {% block script %}
 $(document)
@@ -27,6 +29,4 @@ $(document)
     .ajaxStop(function(){
         $("button:submit").removeClass("log-in").attr("disabled", false);
     });
-    $(":text").addClass('input-block-level');
-    $(":password").addClass('input-block-level');
 {% endblock %}
