--- a/ui/templates/ui/show_steps.html
+++ b/ui/templates/ui/show_steps.html
@@ -5,7 +5,7 @@
             <th>Software</th>
             <th>Parameter</th>
             <th>Check point</th>
-            <th></th>
+            <th>Operation</th>
         </tr>
     </thead>
     <tbody>
