--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -5,6 +5,10 @@
     <div class="page-header">
         <h1>Protocol List</h1>
     </div>
+    <div class="alert alert-info alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Hint:</strong> To edit a protocol, you need to move cursor to Operation column where the protocol locates in, and click the Edit Protocol button. We provide a more detailed instruction in our <a href="http://bioqueue.readthedocs.io/en/latest/protocol.html#edit-steps" target="_blank">documentation</a>.
+    </div>
     <table class="table table-bordered">
         <thead>
             <tr>
