--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -51,7 +51,7 @@
             <li class="list-group-item"><i class="icon-pencil"></i> Protocol</li>
             <li class="list-group-item" id="add-protocol"><a href="{% url 'ui:create_protocol' %}">New Protocol</a></li>
             <li class="list-group-item" id="edit-protocol"><a href="{% url 'ui:query_protocol' %}">Edit Protocol</a></li>
-            <li class="list-group-item" id="manage-reference" class="nav-header"><a href="{% url 'ui:manage_reference' %}"><i class="icon-book"></i> Reference</a></li>
+            <li class="list-group-item nav-header" id="manage-reference"><a href="{% url 'ui:manage_reference' %}"><i class="icon-book"></i> Reference</a></li>
             <li class="list-group-item"><i class="icon-lock"></i> System</li>
             <li class="list-group-item"><a href="{% url 'ui:settings' %}">Settings</a></li>
             <li class="list-group-item"><a href="/admin/auth/user">Users</a></li>
