--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -16,7 +16,7 @@
         </div>
         <form class="form-inline" style="margin-bottom: 10px;">
             <div class="form-group">
-                <label for="act">Action:</label>
+                <label for="batch-action">Action:</label>
                 <select class="form-control" id="batch-action" name="batch-action">
                     <option>---------</option>
                     <option value="d">Delete</option>
@@ -99,18 +99,18 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Logs</h4>
+                <h4 class="modal-title" id="show-logs-head">Logs</h4>
             </div>
             <div class="modal-body"> </div>
         </div>
     </div>
 </div>
-<div class="modal fade" id="showFd" tabindex="-1" role="dialog" aria-labelledby="showLog">
+<div class="modal fade" id="showFd" tabindex="-1" role="dialog" aria-labelledby="showFd">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Result</h4>
+                <h4 class="modal-title" id="show-fd-head">Result</h4>
             </div>
             <div class="modal-body"> </div>
         </div>
