--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -50,7 +50,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add New Step</h4>
+                <h4 class="modal-title" id="nsh">Add New Step</h4>
             </div>
             <div class="modal-body">
                 <form class="form" method="post" id="new-step-form" action="{% url 'ui:add_step' %}">
@@ -78,7 +78,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Step Check Point</h4>
+        <h4 class="modal-title" id="mlh">Step Check Point</h4>
       </div>
       <div class="modal-body"> </div>
       <div class="modal-footer">
@@ -92,21 +92,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Share your protocols with others</h4>
+        <h4 class="modal-title" id="share-head">Share your protocols with others</h4>
       </div>
       <div class="modal-body">
-      	<form class="form" method="post" action="{% url 'ui:share_with_peer' %}">
-            <legend>Share with a peer</legend>
-            <div class="form-group">
-                <label>Peer's username</label>
-                <input type="text" id="peer" name="peer" class="form-control" placeholder="Enter peer's username here" required>
-            </div>
-            <input type="hidden" id="pro" name="pro">
-            <span class="help-block">You can only share your protocol with one peer at a time.</span>
-            <button type="submit" class="btn btn-default btn-block">Share with a peer</button>
-		</form>
+          <h3>Share with a peer</h3>
+          <form class="form" method="post" action="{% url 'ui:share_with_peer' %}">
+              <div class="form-group">
+                  <label>Peer's username</label>
+                  <input type="text" id="peer" name="peer" class="form-control" placeholder="Enter peer's username here" required>
+              </div>
+              <input type="hidden" id="pro" name="pro">
+              <span class="help-block">You can only share your protocol with one peer at a time.</span>
+              <button type="submit" class="btn btn-default btn-block">Share with a peer</button>
+          </form>
           <hr>
-          <legend>Share with public</legend>
+          <h3>Share with public</h3>
           <p>
               By clicking the following button you can build a flattened protocol file which can be uploaded to <a href="http://bioqueue.nefu.edu.cn" target="_blank">our open platform</a> or any other place on the Internet. And other people can use the import function to cite your protocol.
           </p>
